--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'info.hoang8f:fbutton:1.0.5'//新添加的依赖
     testCompile 'junit:junit:4.12'
 }
